@@ -1,3 +1,8 @@
+2011-06-29 Rohin Narayan <narayan@physi.uni.heidelberg.de>
+	* Tag as TrigT1CaloMonitoring-00-09-01
+	* moved disabled tower look up for FineTime calculation 
+	to PPrStabilityMon
+
 2011-05-20  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
 	* Tag as TrigT1CaloMonitoring-00-09-00
         * jobOptions update.
